force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Categorize the incoming request.</description>
    <inlineHelpText>Service/Integration equals - defects or integration cases</inlineHelpText>
    <label>Obsoletet Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service - Integration</fullName>
                <color>#0B6FCE</color>
                <label>Service - Integration</label>
            </value>
            <value>
                <fullName>Major</fullName>
                <color>#78C953</color>
                <label>Major</label>
            </value>
            <value>
                <fullName>Minor</fullName>
                <color>#E27001</color>
                <label>Minor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>