force-app/main/default/objects/Case/fields/Case_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Detail__c</fullName>
    <label>Case Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2 to 3</fullName>
                <color>#0B6FCE</color>
                <label>2 to 3</label>
            </value>
            <value>
                <fullName>30-Day Comfort</fullName>
                <color>#993300</color>
                <label>30-Day Comfort</label>
            </value>
            <value>
                <fullName>3rd Party AP Vendor</fullName>
                <color>#78C953</color>
                <label>3rd Party AP Vendor</label>
            </value>
            <value>
                <fullName>3 to 2</fullName>
                <color>#E27001</color>
                <label>3 to 2</label>
            </value>
            <value>
                <fullName>3 to 4</fullName>
                <color>#A845DC</color>
                <label>3 to 4</label>
            </value>
            <value>
                <fullName>4 to 3</fullName>
                <color>#F3D904</color>
                <label>4 to 3</label>
            </value>
            <value>
                <fullName>Account</fullName>
                <color>#A53711</color>
                <label>Account</label>
            </value>
            <value>
                <fullName>Account Setup</fullName>
                <color>#66E9BD</color>
                <label>Account Setup</label>
            </value>
            <value>
                <fullName>Account Status</fullName>
                <color>#0B24BE</color>
                <label>Account Status</label>
            </value>
            <value>
                <fullName>ACH</fullName>
                <color>#419249</color>
                <label>ACH</label>
            </value>
            <value>
                <fullName>Administrative for Sales</fullName>
                <color>#B6E32E</color>
                <label>Administrative for Sales</label>
            </value>
            <value>
                <fullName>Advertising</fullName>
                <color>#641CCF</color>
                <label>Advertising</label>
            </value>
            <value>
                <fullName>Allowance</fullName>
                <color>#2F5D85</color>
                <label>Allowance</label>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>ARIBA Invoice</fullName>
                <color>#F96FB7</color>
                <label>ARIBA Invoice</label>
            </value>
            <value>
                <fullName>Auth Form #</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
                <color>#2F5D85</color>
                <label>Availability</label>
            </value>
            <value>
                <fullName>Backorder</fullName>
                <color>#AFCADF</color>
                <label>Backorder</label>
            </value>
            <value>
                <fullName>Bill To</fullName>
            </value>
            <value>
                <fullName>Both New and Worn</fullName>
                <color>#8F6429</color>
                <label>Both New and Worn</label>
            </value>
            <value>
                <fullName>Bounce Back</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Business Cards</fullName>
                <color>#EFAE73</color>
                <label>Business Cards</label>
            </value>
            <value>
                <fullName>Buying Programs</fullName>
                <color>#57F17C</color>
                <label>Buying Programs</label>
            </value>
            <value>
                <fullName>Cage Code (SAM)</fullName>
                <color>#0B6FCE</color>
                <label>Cage Code (SAM)</label>
            </value>
            <value>
                <fullName>Call Tags</fullName>
                <color>#78C953</color>
                <label>Call Tags</label>
            </value>
            <value>
                <fullName>Card Charged Incorrectly</fullName>
                <color>#E27001</color>
                <label>Card Charged Incorrectly</label>
            </value>
            <value>
                <fullName>Change Account Address</fullName>
                <color>#A845DC</color>
                <label>Change Account Address</label>
            </value>
            <value>
                <fullName>Change Account Fax</fullName>
                <color>#F3D904</color>
                <label>Change Account Fax</label>
            </value>
            <value>
                <fullName>Change Account Phone</fullName>
                <color>#A53711</color>
                <label>Change Account Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>