force-app/main/default/objects/Case/fields/CaseCreatorRole__c.field-meta.xml
<CustomField>
    <fullName>CaseCreatorRole__c</fullName>
    <description>Role name of the person creating the case, used for reporting by role</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <inlineHelpText>Role name of the person creating the case, used for reporting by role</inlineHelpText>
    <label>Case Creator Role</label>
    <type>Text</type>
</CustomField>