force-app/main/default/objects/Case/fields/CaseReopened__c.field-meta.xml
<CustomField>
    <fullName>CaseReopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case was closed but is set back to in process</description>
    <inlineHelpText>Case was closed but is set back to in process</inlineHelpText>
    <label>Case Reopened</label>
    <type>Checkbox</type>
</CustomField>