force-app/main/default/objects/Case/fields/Catagory_Type__c.field-meta.xml
<CustomField>
    <fullName>Catagory_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Admin</fullName>
            </value>
            <value>
                <fullName>Code Change</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Data Clean up</fullName>
            </value>
            <value>
                <fullName>Data Load</fullName>
            </value>
            <value>
                <fullName>Large project - combo</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Simple Admin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>