force-app/main/default/objects/Case/fields/Chargeback_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Date_Received__c</fullName>
    <inlineHelpText>Required when Case Type is Compliance / Chargeback</inlineHelpText>
    <label>Chargeback Date (Received)</label>
    <type>Date</type>
</CustomField>