force-app/main/default/objects/Case/fields/Claim_Address__c.field-meta.xml
<CustomField>
    <fullName>Claim_Address__c</fullName>
    <label>Claim Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>