force-app/main/default/objects/Case/fields/Claim_City__c.field-meta.xml
<CustomField>
    <fullName>Claim_City__c</fullName>
    <label>Claim City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>