force-app/main/default/objects/Case/fields/Claim_Country__c.field-meta.xml
<CustomField>
    <fullName>Claim_Country__c</fullName>
    <label>Claim Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>