force-app/main/default/objects/Case/fields/Claim_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Claim_Postal_Code__c</fullName>
    <label>Claim Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>