force-app/main/default/objects/Case/fields/Claim_State__c.field-meta.xml
<CustomField>
    <fullName>Claim_State__c</fullName>
    <inlineHelpText>State Abbreviation</inlineHelpText>
    <label>Claim State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>