force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>Reason the RWfB case was closed</description>
    <inlineHelpText>Select the reason/resolution that you are closing this case</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Deactivated</fullName>
            </value>
            <value>
                <fullName>Account Suspended/Deactivated</fullName>
            </value>
            <value>
                <fullName>Account Updated</fullName>
            </value>
            <value>
                <fullName>Acct Validation Complete</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Charged Back</fullName>
            </value>
            <value>
                <fullName>Closed Per Customer Request</fullName>
            </value>
            <value>
                <fullName>Collected_Paid_Invoice</fullName>
                <label>Collected/Paid Invoice</label>
            </value>
            <value>
                <fullName>Customer Retained</fullName>
            </value>
            <value>
                <fullName>Customer Returned Full</fullName>
            </value>
            <value>
                <fullName>Dealer Rejected Assistance</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>No Action Required/Informational</fullName>
            </value>
            <value>
                <fullName>Pricelist Updated</fullName>
            </value>
            <value>
                <fullName>Program Updated</fullName>
            </value>
            <value>
                <fullName>Rebated Excessive Losses</fullName>
            </value>
            <value>
                <fullName>Re-Enroll Successful</fullName>
            </value>
            <value>
                <fullName>Refunded to Corp</fullName>
            </value>
            <value>
                <fullName>Refunded to Dealer</fullName>
            </value>
            <value>
                <fullName>RWBAA Account Closed</fullName>
            </value>
            <value>
                <fullName>RWfB Only, no RWBAA</fullName>
            </value>
            <value>
                <fullName>SH - Bus Case Approved</fullName>
            </value>
            <value>
                <fullName>SH - Bus Case Rejected</fullName>
            </value>
            <value>
                <fullName>Underwritten by RWBAA</fullName>
            </value>
            <value>
                <fullName>Updated Billing Attributes</fullName>
            </value>
            <value>
                <fullName>Updated Billing Method</fullName>
            </value>
            <value>
                <fullName>Updated Contact Information</fullName>
            </value>
            <value>
                <fullName>Updated Remittance Information</fullName>
            </value>
            <value>
                <fullName>Updated Terms</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>