force-app/main/default/objects/Case/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this case is confidential, and will only be available to be seen by those with rights.</description>
    <inlineHelpText>Indicates that this case is confidential, and will only be available to be seen by those with rights.</inlineHelpText>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>