force-app/main/default/objects/Case/fields/Consumer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Phone__c</fullName>
    <description>Consumer phone number</description>
    <inlineHelpText>Consumers phone number</inlineHelpText>
    <label>Consumer Phone</label>
    <type>Phone</type>
</CustomField>