force-app/main/default/objects/Case/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <label>Case Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>