force-app/main/default/objects/Case/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>Case Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>