force-app/main/default/objects/Case/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <label>Case Contact Phone</label>
    <type>Phone</type>
</CustomField>