force-app/main/default/objects/Case/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <description>Subset of picklist values associated with the Root Cause field for RWBAA cases.</description>
    <inlineHelpText>Select appropriate value based on the Root Cause selected</inlineHelpText>
    <label>Corrective Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Root_Cause__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corrected Data &amp; QC</fullName>
            </value>
            <value>
                <fullName>Created Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Created Helpdesk Ticket</fullName>
            </value>
            <value>
                <fullName>Governance/auditing</fullName>
            </value>
            <value>
                <fullName>Implemented revised process</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Training / Coaching</fullName>
            </value>
            <value>
                <fullName>Workaround</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>