force-app/main/default/objects/Case/fields/Coupon_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Tracking_Number__c</fullName>
    <description>Coupon Tracking Number or range of number</description>
    <inlineHelpText>Coupon tracking number or range of numbers. For example 791-794.</inlineHelpText>
    <label>Coupon Tracking #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>