force-app/main/default/objects/Case/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <inlineHelpText>Credit Memo number</inlineHelpText>
    <label>Credit Memo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>