force-app/main/default/objects/Case/fields/Credit_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Number__c</fullName>
    <label>Credit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>