force-app/main/default/objects/Case/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <inlineHelpText>Required when Case Type is Compliance / Chargeback</inlineHelpText>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Pending</fullName>
                <color>#0B6FCE</color>
                <label>Credit Pending</label>
            </value>
            <value>
                <fullName>Credit Issued</fullName>
                <color>#78C953</color>
                <label>Credit Issued</label>
            </value>
            <value>
                <fullName>Credit Denied/Pending</fullName>
                <color>#E27001</color>
                <label>Credit Denied/Pending</label>
            </value>
            <value>
                <fullName>Credit Denied/Chargeback Waived by Customer</fullName>
                <color>#A845DC</color>
                <label>Credit Denied/Chargeback Waived by Customer</label>
            </value>
            <value>
                <fullName>Other Credit Status</fullName>
                <color>#F3D904</color>
                <label>Other Credit Status</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>