force-app/main/default/objects/Case/fields/Customer_Satisfaction_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Impact__c</fullName>
    <description>The impact this change will have on Customer Satisfaction</description>
    <inlineHelpText>The impact this change will have on Customer Satisfaction</inlineHelpText>
    <label>Customer Satisfaction Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>