force-app/main/default/objects/Case/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the lookup to the dealer object.</description>
    <inlineHelpText>Please enter the dealer associated with the case.</inlineHelpText>
    <label>Dealer Name</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>