force-app/main/default/objects/Case/fields/Defective_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Defective_Allowance__c</fullName>
    <label>Defective Allowance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Destroy and Deduct (No %)</fullName>
            </value>
            <value>
                <fullName>0.5%</fullName>
            </value>
            <value>
                <fullName>1.0%</fullName>
            </value>
            <value>
                <fullName>1.5%</fullName>
            </value>
            <value>
                <fullName>1.7%</fullName>
            </value>
            <value>
                <fullName>1.75%</fullName>
            </value>
            <value>
                <fullName>2.0%</fullName>
            </value>
            <value>
                <fullName>3.59%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>