force-app/main/default/objects/Case/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>