force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Employees Department for inclusion on voucher</description>
    <inlineHelpText>Employees Department for inclusion on voucher</inlineHelpText>
    <label>Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>