force-app/main/default/objects/Case/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <description>Describes dependencies</description>
    <label>Dependency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>