force-app/main/default/objects/Case/fields/Desired_PO_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Desired_PO_Capabilities__c</fullName>
    <description>Indicates if the account has a desired PO capability for capturing PO numbers on transaction/invoices.</description>
    <inlineHelpText>Indicates if the account has a desired PO capability for capturing PO numbers on transaction/invoices.</inlineHelpText>
    <label>Desired PO Capabilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blanket</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>