force-app/main/default/objects/Case/fields/Detailed_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Business_Unit__c</fullName>
    <description>These are the detailed business units.</description>
    <inlineHelpText>Please enter the detailed business unit here.</inlineHelpText>
    <label>Detailed Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sales ISM</fullName>
            </value>
            <value>
                <fullName>Sales ROM</fullName>
            </value>
            <value>
                <fullName>Sales TSM</fullName>
            </value>
            <value>
                <fullName>Sales B2B</fullName>
            </value>
            <value>
                <fullName>Sales RD (MGT)</fullName>
            </value>
            <value>
                <fullName>Sales NAM</fullName>
            </value>
            <value>
                <fullName>Sales CAM</fullName>
            </value>
            <value>
                <fullName>Sales TTR</fullName>
            </value>
            <value>
                <fullName>Store Operations</fullName>
            </value>
            <value>
                <fullName>Dealer Operations</fullName>
            </value>
            <value>
                <fullName>Store Development</fullName>
            </value>
            <value>
                <fullName>Merchandising</fullName>
            </value>
            <value>
                <fullName>NA Retail Accounting</fullName>
            </value>
            <value>
                <fullName>Store Retail Accounting</fullName>
            </value>
            <value>
                <fullName>Cash Apps</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Customer Relations</fullName>
            </value>
            <value>
                <fullName>Customer Service - Key Accounts</fullName>
            </value>
            <value>
                <fullName>Customer Service - International</fullName>
            </value>
            <value>
                <fullName>Eloqua</fullName>
            </value>
            <value>
                <fullName>General Marketing</fullName>
            </value>
            <value>
                <fullName>Tax and Audit</fullName>
            </value>
            <value>
                <fullName>Multi Channel</fullName>
            </value>
            <value>
                <fullName>POS / IA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>