force-app/main/default/objects/Case/fields/Direct_to_Store__c.field-meta.xml
<CustomField>
    <fullName>Direct_to_Store__c</fullName>
    <label>Direct to Store</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>