force-app/main/default/objects/Case/fields/Discount_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discount_Comments__c</fullName>
    <label>Discount Comments</label>
    <type>TextArea</type>
</CustomField>