force-app/main/default/objects/Case/fields/Distribution_Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_Code__c</fullName>
    <description>Distribution Channel Code from the Account.</description>
    <formula>Account.Distribution_Channel_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Also referred to as customer group number. This is the Distribution Channel Code from the Account.</inlineHelpText>
    <label>Distribution Channel Code</label>
    <type>Text</type>
</CustomField>