force-app/main/default/objects/Case/fields/Distribution_Details__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Details__c</fullName>
    <label>Distribution Details</label>
    <type>TextArea</type>
</CustomField>