force-app/main/default/objects/Case/fields/Distributor_Details__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Details__c</fullName>
    <label>Distributor Details</label>
    <type>TextArea</type>
</CustomField>