force-app/main/default/objects/Case/fields/DN__c.field-meta.xml
<CustomField>
    <fullName>DN__c</fullName>
    <label>DN #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>