force-app/main/default/objects/Case/fields/DN_OP_Resolution__c.field-meta.xml
<CustomField>
    <fullName>DN_OP_Resolution__c</fullName>
    <description>Describes how the debit note was resolved; case closed</description>
    <inlineHelpText>Describes how the debit note was resolved; case closed</inlineHelpText>
    <label>DN/OP Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Clearing</fullName>
            </value>
            <value>
                <fullName>Write-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>