force-app/main/default/objects/Case/fields/Do_Not_Send_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Surveys__c</fullName>
    <description>Do NOT Delete - used for Case - Closed Send Survey workflow to check if Contact does not want to receive surveys</description>
    <formula>Contact.Do_Not_Send_Surveys__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Send Surveys</label>
    <type>Checkbox</type>
</CustomField>